@@ -1,9 +1,11 @@
 import interfaces.Block;
 import interfaces.Structure;
 
+import java.util.Collection;
 import java.util.List;
+import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 public class Wall implements Structure {
 
@@ -15,20 +17,28 @@ public class Wall implements Structure {
 
     @Override
     public Optional<Block> findBlockByColor(String color) {
-        return blocks.stream()
+        return getBlockStream()
                 .filter(block -> block.getColor().equals(color))
                 .findFirst();
     }
 
     @Override
     public List<Block> findBlocksByMaterial(String material) {
-        return blocks.stream()
+        return getBlockStream()
                 .filter(block -> block.getMaterial().equals(material))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public int count() {
+        if (Objects.isNull(blocks)) {
+            return 0;
+        }
         return blocks.size();
+    }
+
+    private Stream<Block> getBlockStream() {
+        return Stream.ofNullable(blocks)
+                .flatMap(Collection::stream);
     }
 }
